Fixed footer being too short on Home page

--- a/main.css
+++ b/main.css
@@ -131,6 +131,7 @@ body{
     background-color: var(--main-1);
     width: 100%;
     height: 10%;
+    min-height: 100px;
     text-align: center;
     color: var(--bg);
 }
